fix: alignment fixes

--- a/src/components/global/header/header-interactive.scss
+++ b/src/components/global/header/header-interactive.scss
@@ -91,7 +91,7 @@
 
     @media (min-width: 42rem) {
       position: absolute;
-      top: calc(100% + 10px);
+      top: calc(100% + 12px);
       right: -12px;
       bottom: auto;
       left: auto;
@@ -160,6 +160,7 @@
 
   span {
     margin-right: 16px;
+    margin-top: 3px;
   }
 
   &:hover {
