--- a/src/components/global/header/headerFlyouts.scss
+++ b/src/components/global/header/headerFlyouts.scss
@@ -15,7 +15,7 @@
 }
 
 .overflow-icon {
-  display: block;
+  display: flex;
 }
 
 .btn {
