--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -52,6 +52,10 @@
     }
   }
 
+  ::slotted(span) {
+    margin-top: -3px;
+  }
+
   ::slotted(span),
   ::slotted(svg) {
     display: flex;
